ui : used spinner to choose category instead of custom input in AddActivity.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Smart Home</string>
+
+
+    <string-array name="categories">
+        <item>Select Category</item>
+        <item>Light</item>
+        <item>Fan</item>
+        <item>AC / Heater</item>
+        <item>Plugs</item>
+        <item>Security</item>
+        <item>Camera</item>
+        <item>Appliance</item>
+    </string-array>
 </resources>
